2010-01-14 05:41-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/win32/WIN32Server.h: Added decodeWM_MOUSEACTIVATE:..
	* Source/win32/w32_general.m: Added call to decodeWM_COMMAND:
	to -[GSTheme processCommand:] the theme callback which handles 
	native menus, 

2010-01-12 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m: Add missing comma after name of selection atom.

2010-01-10 Riccardo Mottola <rmottola@users.sf.net>

	* Source/win32/w32_activate.m: generate GSAppKitWindowLeave leave
	events.

2010-01-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/w32_text_focus.m: Small clean up in focus handling.

2009-12-19 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/cairo/CairoGState.m:
	-DPSsetflat: and -DPScurrentflat should not have been transforming
	the flatness value with the current transformation matrix.
	The effect of this could be seen in the Apple BezierPathLab example;
	zooming in on the circle caused it to look more and more like a
	polygon.

2009-12-11 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/cairo/CairoGState.m: 
	Add a call to cairo_pattern_set_extend(pattern, CAIRO_EXTEND_PAD);
	on the pattern used to draw images. This keeps the edges of images
	crisp when the are scaled up.
	The description from the Cairo docs is: "pixels outside of the
	pattern copy the closest pixel from the source".

2009-11-19 Doug Simons

	* Source/x11/XGServerWindow.m:
	Make sure we return current window bounds.

2009-11-16 Riccardo Mottola <rmottola@users.sf.net>

	* Source\win32\WIN32Server.m: Remove left-over call to a mouse down
	event in a mouse-up
	
2009-11-10 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\win32\WIN32Server.m: Track mouse button state so that when
	mouse down events are lost (which appears occasionally to be the case)
	we can simulate the missing event.

2009-11-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-windowDevice:): Don't return a
	static variable as the window device.	
