@@ -1,3 +1,13 @@
+2010-01-14  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Source/x11/XGServerEvent.m (-processEvent:): 
+	* Source/x11/XGServerWindow.m (-_wm_state:, -_ewmh_state, -_checkStyle,
+	-_rootWindowForScreen:, -window::::, -nativeWindow:::::): Revise
+	detection of window miniaturization and deminiaturization based on
+	ICCCM WM_STATE property.
+	* Source/x11/XGServerWindow.m (-miniwindow:): Add special case for
+	metacity window manager to avoid miniaturizing shaded windows.
+
 2010-01-14 05:41-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Headers/win32/WIN32Server.h: Added decodeWM_MOUSEACTIVATE:..
